# Lab_03_Genetic_Algorithms

./: example_mastermind.py  pyproject.toml  readme.md  sentence_mastermind.py  solution_GA_deap.ipynb
data/: proverbs.txt
