[tool.poetry]
name = "w3-hd2"
version = "0.1.0"
description = ""
authors = ["Francesco Carrino <francesco.carrino@hes-so.ch>"]
readme = "readme.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
numpy = "^2.1.1"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
jupyter-black = "^0.4.0"
jupyter = "^1.1.1"
deap = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
